--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="row">
+        <div class="row nav__row">
         <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
         <h1>Treact</h1>
         <ul>
