--- a/index.html
+++ b/index.html
@@ -8,18 +8,41 @@
 </head>
 <body>
     <nav>
-        <div class="row nav__row">
+        <div class="nav__row">
+            <div class="nav__logo--wrapper">
         <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
         <h1>Treact</h1>
-        <ul>
+        </div>
+        <div class="nav__list--wrapper">
+        <ul class="nav__links--wrapper">
             <li><a href="#About">About</a></li>
             <li><a href="#Blog">Blog</a></li>
             <li><a href="#Pricing">Pricing</a></li>
             <li><a href="#Contact Us">Contact Us</a></li>
             <li><a href="#Login">Login</a><li>
-            <li><a href="#Sign Up">Sign Up</a><li>         
+            <li class="nav__button"><a class="sign--up--button" href="#Sign Up">Sign Up</a><li>         
         </ul>
+        
+        </div>
         </div>
     </nav>
+
+    <header>
+        <div class="header__row">
+            <div class="header__description--wrapper">
+                <h2>Beautiful React Templates for you.</h2>
+                <p>Our templates are easy yo setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                <form>
+                    <input type="text" placeholder="Your E-mail Address">
+                    <button>Get Started</button>
+                </form>
+                <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+            </div>
+                <figure class="header__img--wrapper">
+                    <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg">
+                </figure>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
