Latest Commit of Today

--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <div class="nav__row">
             <div class="nav__logo--wrapper">
-        <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
-        <h1>Treact</h1>
-        </div>
-        <div class="nav__list--wrapper">
-        <ul class="nav__links--wrapper">
-            <li><a href="#About">About</a></li>
-            <li><a href="#Blog">Blog</a></li>
-            <li><a href="#Pricing">Pricing</a></li>
-            <li><a href="#Contact Us">Contact Us</a></li>
-            <li><a href="#Login">Login</a><li>
-            <li class="nav__button"><a class="sign--up--button" href="#Sign Up">Sign Up</a><li>         
-        </ul>
-        
-        </div>
+                <img class="treact-logo" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
+                <h1>Treact</h1>
+            </div>
+            <div class="nav__list--wrapper">
+                <ul class="nav__links--wrapper">
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Blog">Blog</a></li>
+                    <li><a href="#Pricing">Pricing</a></li>
+                    <li><a href="#Contact Us">Contact Us</a></li>
+                    <li><a href="#Login">Login</a>
+                    <li>
+                    <li class="nav__button"><a class="sign--up--button" href="#Sign Up">Sign Up</a>
+                    <li>
+                </ul>
+
+            </div>
         </div>
     </nav>
 
@@ -31,18 +35,73 @@
         <div class="header__row">
             <div class="header__description--wrapper">
                 <h2>Beautiful React Templates for you.</h2>
-                <p>Our templates are easy yo setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                <p>Our templates are easy to setup, understand and customize. Fully modular components with a variety of
+                    pages and components.</p>
                 <form>
                     <input type="text" placeholder="Your E-mail Address">
                     <button>Get Started</button>
                 </form>
-                <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+                <p class="header--trusted-customers">Our trusted customers</p>
+                <img class="description-image" src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
             </div>
-                <figure class="header__img--wrapper">
-                    <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg">
-                </figure>
-            </div>
+            <figure class="header__img--wrapper">
+                <img class="header-image" src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg">
+            </figure>
+        </div>
         </div>
     </header>
+    <main>
+        <section>
+            <div class="section1__container">
+                <div class="section1__row">
+                    <div class="title">
+                        <h2>Features</h2>
+                        <h3>We have Amazing Service.</h3>
+                        <p class="title__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                            fugiat temporibus quas. Voluptatibus praesentium saepe unde nihil! Voluptas, voluptatibus.
+                        </p>
+                    </div>
+                    <div class="services">
+                        <div class="service">
+                            <div class="service__description">
+                                <div class="boxes">
+                                    <div class="box1">
+                                        <h4>Secure</h4>
+                                        <p>We strictly only deal with vendors that provide top notch security</p>
+                                    </div>
+                                    <div class="box2">
+                                        <h4>24/7 Support</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, eaque!
+                                            Esse, hic voluptatum.</p>
+                                    </div>
+                                    <div class="box3">
+                                        <h5>Customizable</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam qui molestias
+                                            assumenda delectus.</p>
+                                    </div>
+                                    <div class="box4">
+                                        <h5>Reliable</h5>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime delectus
+                                            facilis obcaecati at.</p>
+                                    </div>
+                                    <div class="box5">
+                                        <h6>Fast</h6>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                                            reprehenderit recusandae nam.</p>
+                                    </div>
+                                    <div class="box6">
+                                        <h7>Easy</h7>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere nihil
+                                            aperiam quod cumque.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <section>
+    </main>
 </body>
+
 </html>
