--- a/index.html
+++ b/index.html
@@ -50,53 +50,48 @@
         </div>
         </div>
     </header>
+
     <main>
         <section>
             <div class="section1__container">
                 <div class="section1__row">
                     <div class="title">
-                        <h2>Features</h2>
+                        <h class="title__head">Features</h>
                         <h3>We have Amazing Service.</h3>
-                        <p class="title__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-                            fugiat temporibus quas. Voluptatibus praesentium saepe unde nihil! Voluptas, voluptatibus.
-                        </p>
+                        <p class="title__header--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                            fugiat temporibus quas. Voluptatibus praesentium saepe unde nihil! Voluptas, voluptatibus.</p>
                     </div>
-                    <div class="services">
-                        <div class="service">
-                            <div class="service__description">
+                
                                 <div class="boxes">
-                                    <div class="box1">
-                                        <h4>Secure</h4>
-                                        <p>We strictly only deal with vendors that provide top notch security</p>
+                                    <div class="feature">
+                                        <h class="box__title">Secure</h>
+                                        <p class="title__para">We strictly only deal with vendors that provide top notch security</p>
                                     </div>
-                                    <div class="box2">
-                                        <h4>24/7 Support</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, eaque!
+                                    <div class="feature">
+                                        <h class="box__title">24/7 Support</h>
+                                        <p class="title__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, eaque!
                                             Esse, hic voluptatum.</p>
                                     </div>
-                                    <div class="box3">
-                                        <h5>Customizable</h5>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam qui molestias
+                                    <div class="feature">
+                                        <h class="box__title">Customizable</h>
+                                        <p class="title__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam qui molestias
                                             assumenda delectus.</p>
                                     </div>
-                                    <div class="box4">
-                                        <h5>Reliable</h5>
-                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime delectus
+                                    <div class="feature">
+                                        <h class="box__title">Reliable</h>
+                                        <p class="title__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime delectus
                                             facilis obcaecati at.</p>
                                     </div>
-                                    <div class="box5">
-                                        <h6>Fast</h6>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                                    <div class="feature">
+                                        <h class="box__title">Fast</h>
+                                        <p class="title__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                                             reprehenderit recusandae nam.</p>
                                     </div>
-                                    <div class="box6">
-                                        <h7>Easy</h7>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere nihil
+                                    <div class="feature">
+                                        <h class="box__title">Easy</h>
+                                        <p class="title__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere nihil
                                             aperiam quod cumque.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                 </div>
                     </div>
                 </div>
             </div>
