--- a/index.html
+++ b/index.html
@@ -64,30 +64,36 @@
                 
                                 <div class="boxes">
                                     <div class="feature">
+                                        <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg">
                                         <h class="box__title">Secure</h>
                                         <p class="title__para">We strictly only deal with vendors that provide top notch security</p>
                                     </div>
                                     <div class="feature">
+                                        <img src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg">
                                         <h class="box__title">24/7 Support</h>
                                         <p class="title__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, eaque!
                                             Esse, hic voluptatum.</p>
                                     </div>
                                     <div class="feature">
+                                        <img src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg">
                                         <h class="box__title">Customizable</h>
                                         <p class="title__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam qui molestias
                                             assumenda delectus.</p>
                                     </div>
                                     <div class="feature">
+                                        <img src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg">
                                         <h class="box__title">Reliable</h>
                                         <p class="title__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime delectus
                                             facilis obcaecati at.</p>
                                     </div>
                                     <div class="feature">
+                                        <img src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg">
                                         <h class="box__title">Fast</h>
                                         <p class="title__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                                             reprehenderit recusandae nam.</p>
                                     </div>
                                     <div class="feature">
+                                        <img src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
                                         <h class="box__title">Easy</h>
                                         <p class="title__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere nihil
                                             aperiam quod cumque.</p>
