Latest Git Commit

--- a/index.html
+++ b/index.html
@@ -62,39 +62,51 @@
                             fugiat temporibus quas. Voluptatibus praesentium saepe unde nihil! Voluptas, voluptatibus.</p>
                     </div>
                 
-                                <div class="boxes">
-                                    <div class="feature">
+                             <div class="boxes">
+                                 <div class="feature">
+                                    <div class="feature__icon--wrapper">
                                         <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg">
                                         <h class="box__title">Secure</h>
+                                    </div>
                                         <p class="title__para">We strictly only deal with vendors that provide top notch security</p>
                                     </div>
                                     <div class="feature">
+                                        <div class="feature__icon--wrapper">
                                         <img src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg">
                                         <h class="box__title">24/7 Support</h>
+                                    </div>
                                         <p class="title__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, eaque!
                                             Esse, hic voluptatum.</p>
                                     </div>
                                     <div class="feature">
+                                        <div class="feature__icon--wrapper">
                                         <img src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg">
                                         <h class="box__title">Customizable</h>
+                                    </div>
                                         <p class="title__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam qui molestias
                                             assumenda delectus.</p>
                                     </div>
                                     <div class="feature">
+                                        <div class="feature__icon--wrapper">
                                         <img src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg">
                                         <h class="box__title">Reliable</h>
+                                    </div>
                                         <p class="title__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime delectus
                                             facilis obcaecati at.</p>
                                     </div>
                                     <div class="feature">
+                                        <div class="feature__icon--wrapper">
                                         <img src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg">
                                         <h class="box__title">Fast</h>
+                                    </div>
                                         <p class="title__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                                             reprehenderit recusandae nam.</p>
                                     </div>
                                     <div class="feature">
+                                    <div class="feature__icon--wrapper">
                                         <img src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
                                         <h class="box__title">Easy</h>
+                                    </div>
                                         <p class="title__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere nihil
                                             aperiam quod cumque.</p>
                                  </div>
@@ -102,6 +114,21 @@
                 </div>
             </div>
             <section>
+            <section>
+                <div class="section2__container">
+                    <div class="section2__row">
+                        <div class="section3__description__wrapper">
+                            <h class="section2__title__head">Quality work</h>
+                            <h4>Designed & Developed by Professionals.</h4>
+                            <p class="section2__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque officiis accusamus molestias fuga, quisquam incidunt. Sapiente veniam, atque eos consequatur reprehenderit ipsa, perspiciatis iusto, deleniti culpa ratione laboriosam aliquid!</p>
+                            <button class="section2__botton">Learn more</button>
+                       </div>
+                       <div class="section2__img__wrapper">
+                            <img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png">
+                       </div>
+                    </div>
+                </div>
+            </section>
     </main>
 </body>
 
