--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <button class="section2__botton">Learn more</button>
                        </div>
                        <div class="section2__img__wrapper">
-                            <img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png">
+                            <img class="section2__img" src=./assets/hero-screenshot-1.40a097b525c2f8c9808e.png>
                        </div>
                     </div>
                 </div>
