--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="section1__container">
                 <div class="section1__row">
                     <div class="title">
-                        <h class="title__head">Features</h>
+                        <h class="title__head">FEATURES</h>
                         <h3>We have Amazing Service.</h3>
                         <p class="title__header--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                             fugiat temporibus quas. Voluptatibus praesentium saepe unde nihil! Voluptas, voluptatibus.</p>
@@ -118,13 +118,47 @@
                 <div class="section2__container">
                     <div class="section2__row">
                         <div class="section2__description__wrapper">
-                            <h class="section2__title__head">Quality work</h>
+                            <h class="section2__title__head">QUALITY WORK</h>
                             <h4>Designed & Developed by Professionals.</h4>
                             <p class="section2__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque officiis accusamus molestias fuga, quisquam incidunt. Sapiente veniam, atque eos consequatur reprehenderit ipsa, perspiciatis iusto, deleniti culpa ratione laboriosam aliquid!</p>
                             <button class="section2__botton">Learn more</button>
                        </div>
                        <div class="section2__img__wrapper">
                             <img class="section2__img" src=./assets/hero-screenshot-1.40a097b525c2f8c9808e.png>
+                       </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="section3__container">
+                    <div class="section3__row">
+                        <div class="section3__img__wrapper">
+                            <img class="section3__img" src=./assets/hero-screenshot-2.241aac1fbc66db29d873.png>
+                        <div class="section3__description__wrapper">
+                            <h class="section3__title__head">STEPS</h>
+                            <h5>Easy to Get Started.</h5>
+                            <h5>Register</h5>
+                            <p class="section4__para__register">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <h5>Download</h5>
+                            <p class="section4__para__download">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dicta quidem.</p>
+                            <h5>Run</h5>
+                            <p class="section4__para__Run">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur enim odit nemo.</p>
+                       </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+            <section>
+                <div class="section4__container">
+                    <div class="section4__row">
+                        <div class="section4__description__wrapper">
+                            <h class="section4__title__head">VALUES</h>
+                            <h6>We always abide by our principles.</h6>
+                            <p class="section4__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque officiis accusamus molestias fuga, quisquam incidunt. Sapiente veniam, atque eos consequatur reprehenderit ipsa, perspiciatis iusto, deleniti culpa ratione laboriosam aliquid!</p>
+                            <button class="section4__botton">Learn more</button>
+                       </div>
+                       <div class="section4__img__wrapper">
+                            <img class="section4__img" src=./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg>
                        </div>
                     </div>
                 </div>
