--- a/index.html
+++ b/index.html
@@ -201,26 +201,14 @@
                                         <div class="plan__duration">MONTHLY</div>
                                     </div>
                                     <div class="plan__middle">
-                                        <div class="plan__target">
-                                            For Individuals
-                                        </div>
-                                        <p class="plan__feature">
-                                            30 Templates
-                                        </p>
-                                        <p class="plan__feature">
-                                            7 Landing Pages
-                                        </p>
-                                        <p class="plan__feature">
-                                            12 Internal Pages
-                                        </p>
-                                        <p class="plan__feature">
-                                            Basic Assistance
-                                        </p>
+                                        <div class="plan__target">For Individuals</div>
+                                        <p class="plan__feature">30 Templates</p>
+                                        <p class="plan__feature">7 Landing Pages</p>
+                                        <p class="plan__feature">12 Internal Pages</p>
+                                        <p class="plan__feature">Basic Assistance</p>
                                     </div>
                                     <div class="plan__bottom">
-                                        <button class="plan__button">
-                                            buy now
-                                        </button>
+                                        <button class="plan__button">buy now</button>
                                 <div class="plan">
                                     <div class="plan__stripe"></div>
                                     <div class="plan__top">
@@ -229,26 +217,14 @@
                                         <div class="plan__duration">MONTHLY</div>
                                     </div>
                                     <div class="plan__middle">
-                                        <div class="plan__target">
-                                                    For Small Businesses
-                                        </div>
-                                        <p class="plan__feature">
-                                                    60 Templates
-                                        </p>
-                                        <p class="plan__feature">
-                                                    15 Landing Pages
-                                        </p>
-                                        <p class="plan__feature">
-                                                    22 Internal Pages
-                                        </p>
-                                        <p class="plan__feature">
-                                                    Priority Assistance
-                                        </p>
+                                        <div class="plan__target">For Small Businesses</div>
+                                        <p class="plan__feature">60 Templates</p>
+                                        <p class="plan__feature">15 Landing Pages</p>
+                                        <p class="plan__feature">22 Internal Pages</p>
+                                        <p class="plan__feature">Priority Assistance</p>
                                     </div>
                                     <div class="plan__bottom">
-                                        <button class="plan__button">
-                                                    buy now
-                                        </button>
+                                        <button class="plan__button">buy now</button>
                                 <div class="plan">
                                     <div class="plan__stripe"></div>
                                     <div class="plan__top">
@@ -257,26 +233,14 @@
                                         <div class="plan__duration">MONTHLY</div>
                                     </div>
                                     <div class="plan__middle">
-                                        <div class="plan__target">
-                                                         " For Large Companies "
-                                        </div>
-                                        <p class="plan__feature">
-                                                            " 90 Templates "
-                                        </p>
-                                        <p class="plan__feature">
-                                                            " 27 Landing Pages "
-                                        </p>
-                                        <p class="plan__feature">
-                                                            " 37 Internal Pages "
-                                        </p>
-                                        <p class="plan__feature">
-                                                            " Personal Assistance "
-                                        </p>
+                                        <div class="plan__target">For Large Companies</div>
+                                        <p class="plan__feature">90 Templates</p>
+                                        <p class="plan__feature">27 Landing Pages</p>
+                                        <p class="plan__feature">37 Internal Pages</p>
+                                        <p class="plan__feature">Personal Assistance</p>
                                     </div>
                                     <div class="plan__bottom">
-                                        <button class="plan__button">
-                                                            buy now
-                                        </button>
+                                        <button class="plan__button">buy now</button>
                                 <svg width="600" height="600" viewBox="0 0 600 600"
                                 xmlns="http://www.w3.org/2000/svg" class="plans__blob">
                                 <g transform="translate(300,300)">
